# api/internal/dto/auth/who_am_i.go
@@ -1,0 +1,9 @@
+package auth
+
+import "time"
+
+type WhoAmI struct {
+	Subject   string    `json:"subject"`
+	Scope     []string  `json:"scope"`
+	ExpiresAt time.Time `json:"expires_at"`
+}
